# ermod

./: .gitignore  .hgtags  AUTHORS  ChangeLog  LICENSE  Makefile.am  README  bestfit.F90  compile.sh  configure.ac  enganal.F90  enganal.f  enganal.f90  engmain.F90  engmain.f90  engproc.F90  engproc.f90  engtraj.F90  fft_iface.F90  fft_iface.f90  gromacsfio.c  hash_real.c  insertion.F90  insertion.f  insertion.f90  mpiproc.F90  mpiproc.f90  param.lst.example  param_eng  parameters_er.example  parameters_fe.example  realcal.F90  realcal.F90.php  realcal.f90  realcal.f90.php  realcal_blk.f90  recpcal.F90  recpcal.f90  setconf.F90  setconf.f  (+14 more)
example/gromacs/: meoh.gro  meoh.top  npt.mdp  nvt.mdp  run.mdp
extensions/: README  README_LJLRC  diff_slvfe  slvfe.F90
extensions/LJLRC/: README  diff_slvfe  slvfe.F90
m4/: acx_blas.m4  acx_lapack.m4  acx_mpi_my.m4
tools/: mol_dissection
tools/AMBER/: gen_input  gen_structure
tools/CHARMM/: gen_input  gen_structure
tools/LAMMPS/: gen_input  gen_structure
tools/MARBLE/: README  gen_input  gen_structure
tools/NAMD/: gen_MDinfo  gen_input  gen_sltinfo  gen_structure  inpfile.f  postprocess_namd.sh  sltref.f
tools/gromacs/: gen_input  gen_structure
trajectory-formats/: dcd.f90  ermod_mpi_client.c  marble.f90  modylas.f90  template_fortran.f90
vmdplugins/: Makefile
